--- a/homeworkday3.html
+++ b/homeworkday3.html
@@ -110,7 +110,7 @@
 // console.log(fruit.reverse());
 //Bài 10
 // let name = ["Banana", "Orange", "Apple", "Mango"];
-// fruits = name.splice(0);
+// var fruits = name.slice();
 // console.log(fruits);
 // fruitsNew = fruits.splice(2, 2, "Lemon", "Kiwi");
 // console.log(fruitsNew);
