--- a/Day_2/homework.html
+++ b/Day_2/homework.html
@@ -73,12 +73,14 @@
     //Bai 8
     // let x = prompt('x=');
     // switch(x){
-    //     case '0':
+    //     case '0':{
     //     console.log('Off');
     //     break;
-    //     case '1':
+    //     }
+    //     case '1':{
     //     console.log('On');
     //     break;
+    //     }
     //     default:
     //     console.log('No value found');
     // }
